Criei dois novos html e Css.

--- a/Livre de Criar e Escrever.html
+++ b/Livre de Criar e Escrever.html
@@ -4,30 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css" type="text/css"/>
     <link rel="stylesheet" href="Livre de Criar e Escrever.css" type="text/css"/>
-    <title>Projeto de WDCM</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <h1>Projeto de WDCM</h1>
-    <h2>By Andre1156</h2>
-
-    <p>Arranque do projeto</p>
-
-    <p>Novas Ferramentas</p>
-
-    <ul>
-        <li>Git</li>
-        <li>Github</li>
-    </ul>
-    
 
     <h1> Livre de Criar e Escrever</h1>
     <nav>
         <a href="Livre de Criar e Escrever.css">Livre de Criar e Escrever</a>
 
     </nav>
-
+    
 </body>
 </html>
