Meti Imagem de Background , Instalei o Git no Portátil, e mais umas alterações

--- a/Livre de Criar e Escrever.html
+++ b/Livre de Criar e Escrever.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Livre de Criar e Escrever.css" type="text/css"/>
-    <title>Document</title>
+    <link rel="stylesheet" href="Livre de Criar e Escrever.css"/>
+    <title>Livre de Criar e Escrever</title>
 </head>
 <body>
 
-    <h1> Livre de Criar e Escrever</h1>
-    <nav>
-        <a href="Livre de Criar e Escrever.css">Livre de Criar e Escrever</a>
+    <section class="header">
 
-    </nav>
+    </section>
     
 </body>
 </html>
