--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <h1> Livre de Criar e Escrever</h1>
     <nav>
-        <a href="Livre de Criar e Escrever.css">Livre de Criar e Escrever</a>
+        <a href="Livre de Criar e Escrever.html">Livre de Criar e Escrever</a>
 
     </nav>
 
