Hoje, criei o menu no css, intoduzi o logótipo do site e alterei a posição e o estilo do menu.

--- a/Livre de Criar e Escrever.html
+++ b/Livre de Criar e Escrever.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Livre de Criar e Escrever.css"/>
     <title>Livre de Criar e Escrever</title>
+    <link rel="stylesheet" href="Livre de Criar e Escrever.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <section class="header">
+        <nav>
+            <a href="Livre de Criar e Escrever.html"><img src="img/158135172_109515487866263_2501745557694444762_n.png"></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="">Ínicio</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href="">Contato</a></li>
+                    <li><a href="">Livros</a></li>
+
+                </ul>
+
+            </div>
+        </nav>
 
     </section>
     
