Hoje atualizei o menu.

--- a/Livre de Criar e Escrever.html
+++ b/Livre de Criar e Escrever.html
@@ -26,6 +26,14 @@
             </div>
         </nav>
 
+    <div class='text-box'>
+            <h1>Livre de Criar e Escrever</h1>
+            <p>Bem vindo à Livre de criar e Escrever, onde podes criar as tuas próprias histórias.</p>
+
+
+
+    </div>
+
     </section>
     
 </body>
