Finalização do site.

--- a/Livre de Criar e Escrever.html
+++ b/Livre de Criar e Escrever.html
@@ -16,10 +16,9 @@
             <a href="Livre de Criar e Escrever.html"><img src="img/158135172_109515487866263_2501745557694444762_n.png"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="">Ínicio</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Contato</a></li>
-                    <li><a href="">Livros</a></li>
+                   
+                    <li><a href="Sobre.html">Sobre</a></li>
+                    <li><a href="Livros.html">Livros</a></li>
 
                 </ul>
 
@@ -28,13 +27,21 @@
 
     <div class='text-box'>
             <h1>Livre de Criar e Escrever</h1>
-            <p>Bem vindo à Livre de criar e Escrever, onde podes criar as tuas próprias histórias.</p>
+            <p>Bem vindo à Livre de criar e Escrever, onde podes ler e criar as tuas próprias histórias.</p>
             <a href="https://www.facebook.com/livredecriarescrever" class="hero-btn"> Visita a nossa <br> página no Facebook para descobrires mais sobre nós.</a>
 
 
     </div>
 
     </section>
+
+<section class="Contacto"> 
+    <h1>O nosso Contato.</h1>
+    <p>Telemóvel: 961 337 070</p>
+    <p>Email: andrefiliperodrigues562@gmail.com</p>
+
+
+</section> 
     
 </body>
 </html>
