--- a/Sobre.html
+++ b/Sobre.html
@@ -26,6 +26,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 </head>
 <body>
+      <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCW224H"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
     <h1>Sobre Nós .</h1>
 
     <p>Missão da Empresa: Temos como missão, tornar-nos uma fonte de entretenimento razoável alcançando uma boa satisfação dos clientes.</p>
