--- a/Sobre.html
+++ b/Sobre.html
@@ -31,7 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-    <h1>Sobre Nós .</h1>
+    <h1>Sobre a LdCE.</h1>
 
     <p>Missão da Empresa: Temos como missão, tornar-nos uma fonte de entretenimento razoável alcançando uma boa satisfação dos clientes.</p>
     <p> Visão da Empresa: Esta empresa visa reforçar a sua posição na área do entretenimento, realizando vendas de material de leitura como também permitindo que os seus clientes criem o seu próprio material.</p>
