--- a/Livros.html
+++ b/Livros.html
@@ -31,7 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   
-    <h1>Livros</h1>
+    <h1>Livros da LdCE</h1>
 
     <p>Clica na imagem abaixo para leres a nossa primmeira história!</p>
 
