--- a/Livre de Criar e Escrever.html
+++ b/Livre de Criar e Escrever.html
@@ -30,8 +30,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="nav-links">
                 <ul>
                    
-                    <li><a href="Sobre.html">Sobre</a></li>
-                    <li><a href="Livros.html">Livros</a></li>
+                    <li><a href="Sobre a LdCE.html">Sobre</a></li>
+                    <li><a href="Livros da LdCE.html">Livros</a></li>
 
                 </ul>
 
@@ -40,7 +40,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class='text-box'>
             <h1>Livre de Criar e Escrever</h1>
-            <p>Bem vindo à Livre de criar e Escrever, onde podes ler e criar as tuas próprias histórias.</p>
+            <h1>Bem vindo à Livre de criar e Escrever, onde podes ler e criar as tuas próprias histórias.</h1>
             <a href="https://www.facebook.com/livredecriarescrever" class="hero-btn"> Visita a nossa <br> página no Facebook para descobrires mais sobre nós.</a>
 
 
