Update Livre de Criar e Escrever.html

--- a/Livre de Criar e Escrever.html
+++ b/Livre de Criar e Escrever.html
@@ -40,7 +40,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class='text-box'>
             <h1>Livre de Criar e Escrever</h1>
-            <h1>Bem vindo à Livre de criar e Escrever, onde podes ler e criar as tuas próprias histórias.</h1>
+            <p>Bem vindo à Livre de criar e Escrever, onde podes ler e criar as tuas próprias histórias.</p>
             <a href="https://www.facebook.com/livredecriarescrever" class="hero-btn"> Visita a nossa <br> página no Facebook para descobrires mais sobre nós.</a>
 
 
