Update Livre de Criar e Escrever.html

--- a/Livre de Criar e Escrever.html
+++ b/Livre de Criar e Escrever.html
@@ -30,7 +30,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="nav-links">
                 <ul>
                    
-                    <li><a href="Sobre Nós.html">Sobre</a></li>
+                    <li><a href="Sobre a LdCE.html">Sobre</a></li>
                     <li><a href="Livros da LdCE.html">Livros</a></li>
 
                 </ul>
