Update Livre de Criar e Escrever.html

--- a/Livre de Criar e Escrever.html
+++ b/Livre de Criar e Escrever.html
@@ -30,8 +30,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="nav-links">
                 <ul>
                    
-                    <li><a href="Sobre a LdCE.html">Sobre</a></li>
-                    <li><a href="Livros da LdCE.html">Livros</a></li>
+                    <li><a href="Sobre.html">Sobre a LdCE</a></li>
+                    <li><a href="Livros.html">Livros da LdCE</a></li>
 
                 </ul>
 
